- [MINOR] Adds new API to support ADAL/MSAL migration off of AuthenticationSettings#setSecretKey to a 'managed key' generated by Common (#1244)
- [PATCH] Fix MSAL-CPP injecting javascript loop (#1238)
- [MINOR] Device PoP keys are now generated with attestation flags and expose a certificate chain getter (#1247)

Version 3.1.0
----------
- [PATCH] Discontinue using Settings.Secure.ANDROID_ID in telemetry. Instead, generate & cache a random GUID. (#1214)
- [MINOR] Add refresh_on to access tokens(#1190)
- [MINOR] Add requested_claims to access tokens, and allow credentials to be filtered by RC (#1187)
- [PATCH] Logging change: only log encryption key thumbprint if a key-change occurs (#1213)

Version 3.0.9
----------
- Sends CP version to ESTS and handle WebCP uri. (#1137)
- Check for eligible for caching when putting command in executing command map
- Expose IAccountCredentialCache for accessing lower-level cache functions.
- Adds unit test to verify .trim() behavior of cache keys.
- Make CacheRecord immutable, insist on NonNull AccountRecord (#1225).
- Bugfix for incorrect error code when cancelling requests (#1144).
- Remove initial about:blank page load when using WebView based auth.
- Log an informative error message when application redirect_uri does not match the broker's expected value (#1155).
- Remove connection close from http request to AUTHORIZATION_CODE_NOT_EXCHANGED_FOR_TOKEN issue on emulators.
- Replace deprecated HttpRequest.sendGet usage with HttpClient.get (#1038)
- Replace deprecated HttpRequest.sendPost usage with HttpClient.post (#1037)
- (MSALCPP) Validate ATs before persisting to the cache (#1192)
- Added explicit exceptions when access token, id token or refresh token, which are required are not included in the response.  (MSAL #563)
- Adds API23 WebViewClient#onReceivedError overload (#1197)
- Fixes for MFA setup using Authenticator app.


Version 3.0.8
----------
- Hardcode Teams Agent clientID/scope for FoCi call (#1140)