@@ -25,6 +25,7 @@ package com.microsoft.identity.common.internal.logging;
 import android.os.Build;
 import android.util.Log;
 
+import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
 import com.microsoft.identity.common.adal.internal.util.StringExtensions;
@@ -140,6 +141,19 @@ public final class Logger {
     }
 
     /**
+     * Get only the required metadata from the DiagnosticContext
+     * to plug it in the log lines.
+     * Here we are considering the correlation_id and the thread_name.
+     * The need for this is because DiagnosticContext contains additional metadata which is not always required to be logged.
+     *
+     * @return String The concatenation of thread_name and correlation_id to serve as the required metadata in the log lines.
+     */
+    public static String getDiagnosticContextMetadata() {
+        return DiagnosticContext.THREAD_NAME + " : " + DiagnosticContext.getRequestContext().getOrDefault(DiagnosticContext.THREAD_NAME, "UNSET") + ", " +
+                DiagnosticContext.CORRELATION_ID + " : " + DiagnosticContext.getRequestContext().getOrDefault(DiagnosticContext.CORRELATION_ID, "UNSET");
+    }
+
+    /**
      * Send a {@link LogLevel#ERROR} log message without PII.
      *
      * @param tag          Used to identify the source of a log message.
@@ -153,7 +167,7 @@ public final class Logger {
         getInstance().log(
                 tag,
                 LogLevel.ERROR,
-                DiagnosticContext.getRequestContext().toJsonString(),
+                getDiagnosticContextMetadata(),
                 errorMessage,
                 exception,
                 false
@@ -196,7 +210,7 @@ public final class Logger {
         getInstance().log(
                 tag,
                 LogLevel.ERROR,
-                DiagnosticContext.getRequestContext().toJsonString(),
+                getDiagnosticContextMetadata(),
                 errorMessage,
                 exception,
                 true
@@ -237,7 +251,7 @@ public final class Logger {
         getInstance().log(
                 tag,
                 LogLevel.WARN,
-                DiagnosticContext.getRequestContext().toJsonString(),
+                getDiagnosticContextMetadata(),
                 message,
                 null,
                 false
@@ -276,7 +290,7 @@ public final class Logger {
         getInstance().log(
                 tag,
                 LogLevel.WARN,
-                DiagnosticContext.getRequestContext().toJsonString(),
+                getDiagnosticContextMetadata(),
                 message,
                 null,
                 true
@@ -315,8 +329,7 @@ public final class Logger {
         getInstance().log(
                 tag,
                 LogLevel.INFO,
-                DiagnosticContext.THREAD_ID + " : " + DiagnosticContext.getRequestContext().getOrDefault(DiagnosticContext.THREAD_ID, "UNSET") + ", " +
-                        DiagnosticContext.CORRELATION_ID + " : " + DiagnosticContext.getRequestContext().getOrDefault(DiagnosticContext.CORRELATION_ID, "UNSET"),
+                getDiagnosticContextMetadata(),
                 message,
                 null,
                 false
@@ -348,8 +361,7 @@ public final class Logger {
         getInstance().log(
                 tag,
                 LogLevel.INFO,
-                DiagnosticContext.THREAD_ID + " : " + DiagnosticContext.getRequestContext().getOrDefault(DiagnosticContext.THREAD_ID, "UNSET") + ", " +
-                        DiagnosticContext.CORRELATION_ID + " : " + DiagnosticContext.getRequestContext().getOrDefault(DiagnosticContext.CORRELATION_ID, "UNSET"),
+                getDiagnosticContextMetadata(),
                 message,
                 null,
                 true
@@ -381,7 +393,7 @@ public final class Logger {
         getInstance().log(
                 tag,
                 LogLevel.VERBOSE,
-                DiagnosticContext.getRequestContext().toJsonString(),
+                getDiagnosticContextMetadata(),
                 message,
                 null,
                 false
@@ -420,7 +432,7 @@ public final class Logger {
         getInstance().log(
                 tag,
                 LogLevel.VERBOSE,
-                DiagnosticContext.getRequestContext().toJsonString(),
+                getDiagnosticContextMetadata(),
                 message,
                 null,
                 true
@@ -457,6 +469,8 @@ public final class Logger {
         sLogExecutor.execute(new Runnable() {
             @Override
             public void run() {
+                final String dateTimeStamp = getUTCDateTimeAsString();
+
                 if (logLevel.compareTo(mLogLevel) > 0) {
                     return;
                 }
@@ -468,7 +482,7 @@ public final class Logger {
                 }
 
                 //Format the log message.
-                final String logMessage = formatMessage(correlationID, message, throwable);
+                final String logMessage = formatMessage(correlationID, message, dateTimeStamp, throwable);
 
                 // Send logs into Logcat.
                 if (sAllowLogcat) {
@@ -501,9 +515,10 @@ public final class Logger {
      */
     private String formatMessage(@Nullable final String correlationID,
                                  @Nullable final String message,
+                                 @NonNull final String dateTimeStamp,
                                  @Nullable final Throwable throwable) {
         final String logMessage = StringExtensions.isNullOrBlank(message) ? "N/A" : message;
-        return " [" + getUTCDateTimeAsString()
+        return " [" + dateTimeStamp
                 + (StringExtensions.isNullOrBlank(correlationID) ? "] " : " - " + correlationID + "] ")
                 + logMessage
                 + " Android " + Build.VERSION.SDK_INT
